# simple-backend-examples

./: .gitignore  LICENSE  README.md
backend/nodejs/: README.md  app.js  package.json
backend/nodejs/models/: guestbookdatabase.js
backend/nodejs/routes/: comments.js
backend/python-bottle/: README.md  requirements.txt  server.py
backend/python-tornado/: .gitignore  LICENSE  Makefile  README.md  db.py  main.py  requirements.txt  setup.py
backend/rust/: .gitignore  Cargo.toml  README.md
backend/rust-iron/: Cargo.toml  README.md
backend/rust-iron/src/: comments.rs  db.rs  lib.rs  main.rs
backend/rust/migrations/20170411104636_create_comments/: up.sql
backend/rust/src/: comments.rs  db.rs  main.rs  models.rs
backend/scala/: .gitignore  build.sbt
backend/scala/src/main/resources/css/: style.css
backend/scala/src/main/resources/templates/: index.html
backend/scala/src/main/scala/guestbook/: Database.scala  Model.scala  Server.scala
scala/: build.sbt
scala/src/main/scala/guestbook/: Database.scala  Server.scala
scala/templates/: index.html
