[package]
name = "sample-rust-server"
version = "0.1.0"
authors = ["Ismael Taboada Rodero <ismaeljose.taboada@alumnos.uva.es>"]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
iron = "*"
router = "*"
params = "*"
iron-json-response = "*"
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
